encorporated both methods and maybe broke everything